--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -64,9 +64,18 @@ h1{
     align-content: center;
 }
 
-.form-control{
+.form-control-modif{
     width: 200px;
     height: 40px;
+
+}
+.flash-success{
+    background-color: palegreen;
+
+}
+
+.flash-error{
+    background-color: #B0413E;
 
 }
 
