--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -31,20 +31,20 @@
                     <li class="list-group-item">
                         <div class="container d-flex">
                             {{ form_label(sortieForm.campus) }}
-                            {{ form_widget(sortieForm.campus,{'attr': {'class': 'form-control'}}) }}
+                            {{ form_widget(sortieForm.campus,{'attr': {'class': 'form-control form-control-modif'}}) }}
 
                             {{ form_label(sortieForm.name) }}
-                            {{ form_widget(sortieForm.name,{'attr': {'class': 'form-control'}}) }}
+                            {{ form_widget(sortieForm.name,{'attr': {'class': 'form-control form-control-modif'}}) }}
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="container d-flex">
 
                             {{ form_label(sortieForm.dateUn) }}
-                            {{ form_widget(sortieForm.dateUn,{'attr': {'class': 'form-control'}}) }}
+                            {{ form_widget(sortieForm.dateUn,{'attr': {'class': 'form-control form-control-modif'}}) }}
 
                             {{ form_label(sortieForm.dateDeux) }}
-                            {{ form_widget(sortieForm.dateDeux,{'attr': {'class': 'form-control'}}) }}
+                            {{ form_widget(sortieForm.dateDeux,{'attr': {'class': 'form-control form-control-modif'}}) }}
                         </div>
                     </li>
 
