--- a/templates/admin/listVilles.html.twig
+++ b/templates/admin/listVilles.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ parent() }} | Admin | User {% endblock %}
+{% block title %}{{ parent() }} | Admin | Ville {% endblock %}
 
 {% block body %}
 
