--- a/templates/user/update.html.twig
+++ b/templates/user/update.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} {{ parent() }} | Update{% endblock %}
+{% block title %}{{ parent() }} | Profil{% endblock %}
 
 {% block body %}
     <h1 class="container-fluid d-flex justify-content-center">Modifier</h1>
