--- a/templates/sortie/list.html.twig
+++ b/templates/sortie/list.html.twig
@@ -1,9 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
 
-    {{ parent () }} | Create
-{% endblock %}
+{% block title %}{{ parent() }} | Sortie{% endblock %}
 
 {% block body %}
 
