--- a/templates/admin/createVille.html.twig
+++ b/templates/admin/createVille.html.twig
@@ -20,7 +20,7 @@
         {{ form_widget(villeForm.cp, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
 
         <br>
-        <button type="submit" class="link_button btn btn-outline-secondary">Enregistrer</button>
+        <button type="submit" class="link_button btn btn-outline-success">Enregistrer</button>
         <a class="link_button btn btn-outline-danger" href="{{ path('admin_ville_list') }}"
            role="button">Annuler</a>
 
