--- a/templates/admin/listuser.html.twig
+++ b/templates/admin/listuser.html.twig
@@ -41,12 +41,12 @@
         </table>
     </section>
 <div class="container-fluid d-flex justify-content-center">
-    <a class="link_button btn btn-outline-secondary " href="{{ path('admin_user_add') }}" role="button">Ajouter un utilisateur</a>
-    <a class="link_button btn btn-outline-secondary " href="{{ path('user_admin_import') }}" role="button">Ajouter un fichier CSV d'utilisateurs</a>
+    <a class="link_button btn btn-outline-success " href="{{ path('admin_user_add') }}" role="button">Ajouter un utilisateur</a>
+    <a class="link_button btn btn-outline-success " href="{{ path('user_admin_import') }}" role="button">Ajouter un fichier CSV d'utilisateurs</a>
 
 </div>
     <div class="container-fluid d-flex justify-content-center">
-        <a class="link_button btn btn-outline-secondary " href="{{ path('admin_dash') }}" role="button">Retour</a>
+        <a class="link_button btn btn-outline-warning " href="{{ path('admin_dash') }}" role="button">Retour</a>
 
     </div>
 {% endblock %}
