--- a/templates/admin/showVille.html.twig
+++ b/templates/admin/showVille.html.twig
@@ -18,7 +18,7 @@
                 </li>
                 <li class="list-group-item">
                     <div class="container-fluid d-flex justify-content-center">
-                        <a class="link_button btn btn-outline-secondary" href="{{ path('admin_ville_update', {'id': ville.id}) }}"
+                        <a class="link_button btn btn-outline-success" href="{{ path('admin_ville_update', {'id': ville.id}) }}"
                            role="button">Modifier</a>
                         <a class="link_button btn btn-outline-warning" href="{{ path('admin_ville_list') }}"
                            role="button">Retour</a>
