--- a/templates/admin/adcampus.html.twig
+++ b/templates/admin/adcampus.html.twig
@@ -52,7 +52,7 @@
     </section>
 
     <div class="container-fluid d-flex justify-content-center">
-        <a class="link_button btn btn-outline-secondary " href="{{ path('admin_dash') }}" role="button">Retour</a>
+        <a class="link_button btn btn-outline-warning " href="{{ path('admin_dash') }}" role="button">Retour</a>
 
     </div>
 {% endblock %}
