--- a/templates/admin/listVilles.html.twig
+++ b/templates/admin/listVilles.html.twig
@@ -20,7 +20,6 @@
                 <tr>
                     <td><a class="list-group-item list-group-item-action" href="{{ path('admin_ville_show', {'id': ville.id}) }}">{{ ville.name }}</a></td>
                     <td><a class="list-group-item list-group-item-action" href="{{ path('admin_ville_show', {'id': ville.id}) }}">{{ ville.cp }}</a></td>
-{#                    <td><a  href="{{ path('user_update', {'id': user.id}) }}">Modifier</a> - <a class="text-danger" href="{{ path('admin_user_delete', {'id': user.id}) }}">Supprimer</a></td>#}
                     <td><a  href="{{ path('admin_ville_update', {'id': ville.id}) }}">Modifier</a></td>
                 </tr>
 
@@ -30,11 +29,11 @@
         </table>
     </section>
 <div class="container-fluid d-flex justify-content-center">
-    <a class="link_button btn btn-outline-secondary " href="{{ path('admin_ville_create') }}" role="button">Ajouter une ville</a>
+    <a class="link_button btn btn-outline-success " href="{{ path('admin_ville_create') }}" role="button">Ajouter une ville</a>
 
 </div>
     <div class="container-fluid d-flex justify-content-center">
-        <a class="link_button btn btn-outline-secondary " href="{{ path('admin_dash') }}" role="button">Retour</a>
+        <a class="link_button btn btn-outline-warning " href="{{ path('admin_dash') }}" role="button">Retour</a>
 
     </div>
 {% endblock %}
