--- a/templates/lieu/list.html.twig
+++ b/templates/lieu/list.html.twig
@@ -36,10 +36,10 @@
             </tbody>
         </table>
 
-        <a class="link_button btn btn-outline-secondary" href="{{ path('lieu_create') }}" role="button">Créer un lieu</a>
     </section>
     <div class="container-fluid d-flex justify-content-center">
-        <a class="link_button btn btn-outline-secondary " href="{{ path('admin_dash') }}" role="button">Retour</a>
+        <a class="link_button btn btn-outline-success" href="{{ path('lieu_create') }}" role="button">Créer un lieu</a>
+        <a class="link_button btn btn-outline-warning " href="{{ path('admin_dash') }}" role="button">Retour</a>
 
     </div>
 {% endblock %}
