--- a/templates/admin/importuser.html.twig
+++ b/templates/admin/importuser.html.twig
@@ -8,7 +8,10 @@
     <h1 class="container-fluid d-flex justify-content-center">Import d'utilisateurs</h1>
 <div class="container-fluid d-flex justify-content-center">
     {{ form_start(form) }}
-    <input type="submit" value="Envoyer">
+
+    {{ form_widget(form) }}
+    <br>
+    <input type="submit" class="btn btn-outline-success" value="Envoyer">
     {{ form_end(form) }}
 </div>
 
