--- a/templates/security/forget.html.twig
+++ b/templates/security/forget.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ parent() }} | Login{% endblock %}
+{% block title %}Log in!{% endblock %}
 
 {% block body %}
     <form method="post">
@@ -18,37 +18,42 @@
         <div class="container-fluid d-flex show">
             <label for="inputUsername">Pseudo ou adresse e-mail </label>
         </div>
+
         <div class="container-fluid d-flex show justify-content-center">
             <input type="text" value="{{ last_username }}" name="username_or_email" id="inputUsername" class="form-control"
                    autocomplete="username email" required autofocus>
         </div>
+        <br>
+
+
         <div class="container-fluid d-flex show">
-            <label for="inputPassword">Mot de passe</label>
+            <label for="inputNewPassword">Nouveau mot de passe</label>
         </div>
+
         <div class="container-fluid d-flex show justify-content-center">
-            <input type="password" name="password" id="inputPassword" class="form-control"
-                   autocomplete="current-password" required>
+            <input type="password" name="new_password" id="inputNewPassword" class="form-control" required>
         </div>
+<br>
+
         <div class="container-fluid d-flex show justify-content-center">
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}"
-        >
-        <label>
-            <input type="checkbox" name="_remember_me" checked/>
-            Se souvenir de moi
-        </label>
+            <input type="hidden" name="_csrf_token"
+                   value="{{ csrf_token('authenticate') }}"
+            >
+            <label>
+                <input type="checkbox" name="_remember_me" checked/>
+                Se souvenir de moi
+            </label>
         </div>
+        <br>
         <div class="container-fluid d-flex show justify-content-center">
-        <button class="btn btn-lg btn-primary" type="submit">
-            Connexion
-        </button>
+            <button class="btn btn-lg btn-primary" type="submit">
+                Connexion
+            </button>
         </div>
         <br>
 
 
-        <div class="mb-3">
-           <a href="{{ path('app_forget') }}">Mot de passe oublié </a>
-        </div>
+
 
     </form>
 {% endblock %}
