--- a/templates/sortie/update.html.twig
+++ b/templates/sortie/update.html.twig
@@ -77,14 +77,14 @@
     <br>
 
 
-    <button type="submit" name="creee" class="link_button btn btn-outline-secondary">Enregistrer</button>
+    <button type="submit" name="creee" class="link_button btn btn-outline-success">Enregistrer</button>
     {% if sortie.etat.id < 2 %}
-    <button type="submit" name="publiee" class="link_button btn btn-outline-secondary">Publier la sortie</button>
+    <button type="submit" name="publiee" class="link_button btn btn-outline-success">Publier la sortie</button>
     {% endif %}
     <input type="hidden" id="motif_annulation" name="motif_annulation" value="">
     <button type="submit" name="annuler" onclick="document.getElementById('motif_annulation').value = prompt('Motif de l\'annulation : ')" class="link_button btn btn-outline-danger">Annuler la sortie</button>
-    <a class="link_button btn btn-outline-danger" href="{{ path('main_home') }}"
-       role="button">Annuler</a>
+    <a class="link_button btn btn-outline-warning" href="{{ path('main_home') }}"
+       role="button">Retour</a>
 
         {{ form_end(sortieForm) }}
     </div>
