add user correction

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -50,7 +50,7 @@
         {{ form_widget(registrationForm.confirmPassword, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
         <div id="mdpbox"></div>
         <br>
-        <button type="submit" class="btn btn-outline-secondary" >Register</button>
+        <button type="submit" class="btn btn-outline-success" >Register</button>
         {{ form_end(registrationForm) }}
 
     </div>
