--- a/templates/user/update.html.twig
+++ b/templates/user/update.html.twig
@@ -66,7 +66,7 @@
 
         {% if user.actif %}
 
-            <button type="submit" name="actif" class="btn btn-outline-warning">Rendre innactif</button>
+            <button type="submit" name="actif" class="btn btn-outline-warning">Rendre inactif</button>
         {% else %}
             <button type="submit" name="actif" class="btn btn-outline-warning">Rendre actif</button>
         {% endif %}
