--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,8 +45,10 @@
 
 {% block body %}{% endblock %}
 
-<footer>
-    <h5 class="sticky-sm-bottom"> &copy; Eni, Farid, Gaspard & Hélène</h5>
+<footer class="bg-footer fixed-bottom" style="position: fixed; bottom: 0; width: 100%;">
+    <div class="container-fluid">
+        <p class="m-0 text-center text-white">Copyright &copy; Farid, Gaspard & Hélène 2023</p>
+    </div>
 </footer>
 
 </body>
