--- a/templates/lieu/create.html.twig
+++ b/templates/lieu/create.html.twig
@@ -6,6 +6,7 @@
 
     <h1 class="container-fluid d-flex justify-content-center">Créer un lieu</h1>
 
+    <div class="container" id="map"></div>
 
     <div class="container-fluid d-flex flex-direction-column justify-content-center">
 
@@ -46,6 +47,124 @@
         {{ form_label(lieuForm.Code_postal) }}
         {{ form_widget(lieuForm.Code_postal, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
 
+
+        <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+        <script>
+
+            let map = L.map('map',{dragging: true}).setView([47.2, 2.333], 6);
+
+            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+            }).addTo(map);
+
+            // let marker = new  L.marker([47,2],{
+            //     draggable: true,
+            //     dragging:true,
+            //     autoPan: true ,
+            //     autoPanPadding: [100,100] }).addTo(map);
+
+
+            // Sélectionnez la case à cocher par son ID
+            const checkbox = document.getElementById('checkboxChoix');
+
+            let marker = null;
+
+            function setMarker(lon, lat, rue, ville) {
+                if (marker) {
+                    marker.remove();
+                }
+
+                marker = new L.marker([lon, lat], {
+                    draggable: false,
+                    dragging: false,
+                    autoPan: true,
+                    autoPanPadding: [100, 100]
+                }).addTo(map);
+                console.log(marker)
+                console.log(map);
+
+                map.setView([lon, lat], 13);
+                marker.bindPopup(`<strong>${lat}</strong><br>${ville}`);
+            }
+
+            function lieuPin() {
+                const selectLieu = document.querySelector('#sorties_lieu');
+                selectLieu.addEventListener('change', async function () {
+                    const selectedOption = this.options[this.selectedIndex];
+                    const lieu = await getLieu(selectedOption.value);
+                    const rue = lieu.sortie.rue;
+                    const adresse = rue.replace(' ', '+') + '+' + lieu.sortie.ville.name;
+                    console.log(adresse)
+                    var data = await callApi(adresse);
+                    console.log(data)
+
+                    lat = data.features[0].geometry.coordinates[0]
+                    lon = data.features[0].geometry.coordinates[1]
+
+                    setMarker(lon, lat, rue, lieu.sortie.ville.name);
+                });
+            }
+
+            checkbox.addEventListener('change', function() {
+                if (checkbox.checked) {
+                    const input = document.getElementById('sorties_rue');
+                    var newStr = null;
+                    var userInput=null
+                    input.addEventListener('input', function() {
+                        userInput = input.value;
+
+                        console.log('Donnée saisie par l\'utilisateur :', userInput);
+                        newStr = userInput.replace(' ', '+');
+                    });
+
+                    const selectElement = document.querySelector('#sorties_ville_select');
+
+                    let lat=null;
+                    let lon=null;
+
+                    selectElement.addEventListener('change', async function () {
+                        const selectedOption = this.options[this.selectedIndex];
+                        const selectedContent = selectedOption.innerHTML;
+                        console.log('Contenu de l\'option sélectionnée :', selectedContent);
+                        const result = newStr + "+" + selectedContent;
+                        console.log(await callApi(result))
+                        var data = await callApi(result);
+                        // console.log(data.features[0].geometry.coordinates)
+                        // console.log(data.features[0].geometry.coordinates[0])
+                        document.getElementById('sorties_Latitude').value = data.features[0].geometry.coordinates[0]
+                        document.getElementById('sorties_Longitude').value = data.features[0].geometry.coordinates[1]
+
+                        lat = data.features[0].geometry.coordinates[0]
+                        lon = data.features[0].geometry.coordinates[1]
+
+                        setMarker(lon, lat, userInput, selectedContent);
+
+                    });
+                } else {
+                    lieuPin();
+                }
+            });
+
+
+            lieuPin();
+
+            async function callApi(result) {
+                let response = await fetch(`https://api-adresse.data.gouv.fr/search/?q=${result}`)
+                if (response.ok) {
+                    return response.json()
+                }
+            }
+
+            async function getLieu(id) {
+                const currentURL = window.location.href; // Obtenez l'URL actuelle du navigateur
+                const domain = currentURL.split('/')[2]; // Extrayez le nom de domaine
+                let response = await fetch(`http://${domain}/sortirv3/public/api/lieu/${id}`)
+                if (response.ok) {
+                    return response.json()
+                }
+            }
+
+        </script>
 
         <br>
         <button type="submit" class="link_button btn btn-outline-secondary">Enregistrer</button>
