--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -86,6 +86,11 @@ nav{
     font-size: 0.8em;
 }
 
+#map{
+    border-radius: 10px;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    margin-bottom: 5vh;"></div>
+}
 
 /*
 footer a.text-light:hover { color: #fed136!important; text-decoration: none; }
