--- a/templates/lieu/list.html.twig
+++ b/templates/lieu/list.html.twig
@@ -27,8 +27,8 @@
                     <td><a class="list-group-item list-group-item-action" href="{{ path('lieu_show', {'id': lieu.id}) }}">{{ lieu.latitude }}</a></td>
                     <td><a class="list-group-item list-group-item-action" href="{{ path('lieu_show', {'id': lieu.id}) }}">{{ lieu.longitude }}</a></td>
                     {#                    <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}">{{ lieu.longitude }}</a></td>#}
-                    <td><a  href="{{ path('lieu_update', {'id': lieu.id})  }}"> Modifier ⚙ </a> -
-                        <a class="text-danger" href="{{ path('lieu_delete', {'id': lieu.id}) }}" onclick="return confirm('Etes vous sûre de vouloir supprimer le lieu {{ lieu.nom }}')"> Supprimer ❌ </a></td>
+                    <td><a  href="{{ path('lieu_update', {'id': lieu.id})  }}"> Modifier </a> -
+                        <a class="text-danger" href="{{ path('lieu_delete', {'id': lieu.id}) }}" onclick="return confirm('Etes vous sûre de vouloir supprimer le lieu {{ lieu.nom }}')"> Supprimer </a></td>
                 </tr>
 
             {% endfor %}
