--- a/templates/lieu/create.html.twig
+++ b/templates/lieu/create.html.twig
@@ -1,180 +1,184 @@
-{% extends 'base.html.twig' %}
+    {% extends 'base.html.twig' %}
 
-{% block title %}{{ parent() }} | Lieu{% endblock %}
+    {% block title %}{{ parent() }} | Lieu{% endblock %}
 
-{% block body %}
+    {% block body %}
 
-    <h1 class="container-fluid d-flex justify-content-center">Créer un lieu</h1>
+        <h1 class="container-fluid d-flex justify-content-center">Créer un lieu</h1>
 
-    <div class="container" id="map"></div>
+        <div class="container" id="map"></div>
 
-    <div class="container-fluid d-flex flex-direction-column justify-content-center">
+        <div class="container-fluid d-flex flex-direction-column justify-content-center">
 
-        {{ form_start(lieuForm) }}
-        {{ form_errors(lieuForm.nom) }}
-        {{ form_errors(lieuForm.latitude) }}
-        {{ form_errors(lieuForm.longitude) }}
-        {{ form_errors(lieuForm.rue) }}
-        {{ form_errors(lieuForm.ville) }}
+            {{ form_start(lieuForm) }}
+            {{ form_errors(lieuForm.nom) }}
+            {{ form_errors(lieuForm.latitude) }}
+            {{ form_errors(lieuForm.longitude) }}
+            {{ form_errors(lieuForm.rue) }}
+            {{ form_errors(lieuForm.ville) }}
 
-        {{ form_label(lieuForm.nom) }}
-        {{ form_widget(lieuForm.nom, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
+            {{ form_label(lieuForm.nom) }}
+            {{ form_widget(lieuForm.nom, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
 
-        {{ form_label(lieuForm.latitude) }}
-        {{ form_widget(lieuForm.latitude, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
+            {{ form_widget(lieuForm.latitude, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control', 'type': 'hidden'}}|merge({'type': 'hidden'})) }}
+            {{ form_widget(lieuForm.longitude, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control', 'type': 'hidden'}}|merge({'type': 'hidden'})) }}
 
-        {{ form_label(lieuForm.longitude) }}
-        {{ form_widget(lieuForm.longitude, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
 
-        {{ form_label(lieuForm.rue) }}
-        {{ form_widget(lieuForm.rue, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
+            {{ form_label(lieuForm.rue) }}
+            {{ form_widget(lieuForm.rue, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
 
-        {{ form_label(lieuForm.ville) }}
-        {{ form_widget(lieuForm.ville, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
+            {{ form_label(lieuForm.ville) }}
+            {{ form_widget(lieuForm.ville, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
 
-        <label for="checkboxChoixVille"> Ajouter une ville</label>
-        <input id="checkboxChoixVille" type="checkbox" name="myCheckboxVille" onchange="
-        var sortiesLieu = document.getElementById('lieu_ville');
-        sortiesLieu.disabled = this.checked;
-        document.getElementById('lieu_Ville').disabled = !this.checked;
-        document.getElementById('lieu_Code_postal').disabled = !this.checked;"> <br>
+            <label for="checkboxChoixVille"> Ajouter une ville</label>
+            <input id="checkboxChoixVille" type="checkbox" name="myCheckboxVille" onchange="
+            var sortiesLieu = document.getElementById('lieu_ville');
+            sortiesLieu.disabled = this.checked;
+            document.getElementById('lieu_Ville').disabled = !this.checked;
+            document.getElementById('lieu_Code_postal').disabled = !this.checked;"> <br>
 
 
 
-        {{ form_label(lieuForm.Ville) }}
-        {{ form_widget(lieuForm.Ville, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
+            {{ form_label(lieuForm.Ville) }}
+            {{ form_widget(lieuForm.Ville, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
 
-        {{ form_label(lieuForm.Code_postal) }}
-        {{ form_widget(lieuForm.Code_postal, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
-
-
-        <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
-        <script>
-
-            let map = L.map('map',{dragging: true}).setView([47.2, 2.333], 6);
-
-            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-            }).addTo(map);
-
-            // let marker = new  L.marker([47,2],{
-            //     draggable: true,
-            //     dragging:true,
-            //     autoPan: true ,
-            //     autoPanPadding: [100,100] }).addTo(map);
+            {{ form_label(lieuForm.Code_postal) }}
+            {{ form_widget(lieuForm.Code_postal, {'attr': {'class': 'container-fluid d-flex justify-content-center form-control'}}) }}
 
 
-            // Sélectionnez la case à cocher par son ID
-            const checkbox = document.getElementById('checkboxChoixVille');
+            <input id="lat" type="hidden">
+            <input id="lon" type="hidden">
+            <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+            <script>
 
-            let marker = null;
+                let map = L.map('map',{dragging: true}).setView([47.2, 2.333], 6);
 
-            function setMarker(lon, lat, rue, ville) {
-                if (marker) {
-                    marker.remove();
+                L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+                }).addTo(map);
+
+                // let marker = new  L.marker([47,2],{
+                //     draggable: true,
+                //     dragging:true,
+                //     autoPan: true ,
+                //     autoPanPadding: [100,100] }).addTo(map);
+
+
+                // Sélectionnez la case à cocher par son ID
+                const checkbox = document.getElementById('checkboxChoixVille');
+
+                let marker = null;
+
+                function setMarker(lon, lat, rue, ville) {
+                    if (marker) {
+                        marker.remove();
+                    }
+
+                    marker = new L.marker([lon, lat], {
+                        draggable: false,
+                        dragging: false,
+                        autoPan: true,
+                        autoPanPadding: [100, 100]
+                    }).addTo(map);
+                    console.log(marker)
+                    console.log(map);
+
+                    map.setView([lon, lat], 13);
+                    marker.bindPopup(`<strong>${lat}</strong><br>${ville}`);
                 }
 
-                marker = new L.marker([lon, lat], {
-                    draggable: false,
-                    dragging: false,
-                    autoPan: true,
-                    autoPanPadding: [100, 100]
-                }).addTo(map);
-                console.log(marker)
-                console.log(map);
-
-                map.setView([lon, lat], 13);
-                marker.bindPopup(`<strong>${lat}</strong><br>${ville}`);
-            }
-
-            function lieuPin() {
-                const selectVille = document.querySelector('#lieu_ville');
-                selectVille.addEventListener('change', async function () {
-                    const selectedOption = this.options[this.selectedIndex];
-                    const selectedContent = selectedOption.innerHTML;
-                    const lieu = await getLieu(selectedOption.value);
-                    const adresse = newStr + '+' + selectedContent;
-                    console.log(adresse)
-                    var data = await callApi(adresse);
-                    console.log(data)
-
-                    lat = data.features[0].geometry.coordinates[0]
-                    lon = data.features[0].geometry.coordinates[1]
-
-                    setMarker(lon, lat, newStr, selectedContent);
-                });
-            }
-            const input = document.getElementById('lieu_rue');
-            var newStr = null;
-            var userInput=null
-            input.addEventListener('input', function() {
-                userInput = input.value;
-
-                console.log('Donnée saisie par l\'utilisateur :', userInput);
-                newStr = userInput.replace(' ', '+');
-            });
-
-            checkbox.addEventListener('change', async function () {
-                if (checkbox.checked) {
-
-                    let lat = null;
-                    let lon = null;
-
-                    const inputVille = document.getElementById('lieu_Ville');
-                    let newStrVille = null;
-                    let userInputVille = null;
-                    inputVille.addEventListener('input', async function () {
-                        userInputVille = inputVille.value;
-
-                        console.log('Donnée saisie par l\'utilisateur :', userInputVille);
-                        newStrVille = userInputVille.replace(' ', '+');
-                        const result = newStr + "+" + newStrVille;
-                        console.log(await callApi(result))
-                        var data = await callApi(result);
-                        console.log(data.features[0].geometry.coordinates)
-                        console.log(data.features[0].geometry.coordinates[0])
-                        // document.getElementById('sorties_Latitude').value = data.features[0].geometry.coordinates[0]
-                        // document.getElementById('sorties_Longitude').value = data.features[0].geometry.coordinates[1]
+                function lieuPin() {
+                    const selectVille = document.querySelector('#lieu_ville');
+                    selectVille.addEventListener('change', async function () {
+                        const selectedOption = this.options[this.selectedIndex];
+                        const selectedContent = selectedOption.innerHTML;
+                        const lieu = await getLieu(selectedOption.value);
+                        const adresse = newStr + '+' + selectedContent;
+                        console.log(adresse)
+                        var data = await callApi(adresse);
+                        console.log(data)
 
                         lat = data.features[0].geometry.coordinates[0]
                         lon = data.features[0].geometry.coordinates[1]
+                        document.getElementById("lieu_latitude").value = lat
+                        document.getElementById("lieu_longitude").value = lon
+                        console.log("LAT : " + document.getElementById("lieu_latitude").value)
+                        console.log("LON : " + document.getElementById("lieu_longitude").value)
 
-                        setMarker(lon, lat, userInput, newStrVille);
+
+                        setMarker(lon, lat, newStr, selectedContent);
                     });
-
-
-                } else {
-                    lieuPin();
                 }
-            });
+                const input = document.getElementById('lieu_rue');
+                var newStr = null;
+                var userInput=null
+                input.addEventListener('input', function() {
+                    userInput = input.value;
+
+                    console.log('Donnée saisie par l\'utilisateur :', userInput);
+                    newStr = userInput.replace(' ', '+');
+                });
+
+                checkbox.addEventListener('change', async function () {
+                    if (checkbox.checked) {
+
+                        let lat = null;
+                        let lon = null;
+
+                        const inputVille = document.getElementById('lieu_Ville');
+                        let newStrVille = null;
+                        let userInputVille = null;
+                        inputVille.addEventListener('input', async function () {
+                            userInputVille = inputVille.value;
+
+                            console.log('Donnée saisie par l\'utilisateur :', userInputVille);
+                            newStrVille = userInputVille.replace(' ', '+');
+                            const result = newStr + "+" + newStrVille;
+                            console.log(await callApi(result))
+                            var data = await callApi(result);
+                            console.log(data.features[0].geometry.coordinates)
+                            console.log(data.features[0].geometry.coordinates[0])
+
+                            lat = data.features[0].geometry.coordinates[0]
+                            lon = data.features[0].geometry.coordinates[1]
+                            document.getElementById("lieu_latitude").value = lon
+                            document.getElementById("lieu_longitude").value = lat
+
+                            setMarker(lon, lat, userInput, newStrVille);
+                        });
 
 
-            lieuPin();
+                    } else {
+                        lieuPin();
+                    }
+                });
 
-            async function callApi(result) {
-                let response = await fetch(`https://api-adresse.data.gouv.fr/search/?q=${result}`)
-                if (response.ok) {
-                    return response.json()
+                lieuPin();
+
+                async function callApi(result) {
+                    let response = await fetch(`https://api-adresse.data.gouv.fr/search/?q=${result}`)
+                    if (response.ok) {
+                        return response.json()
+                    }
                 }
-            }
 
-            async function getLieu(id) {
-                const currentURL = window.location.href; // Obtenez l'URL actuelle du navigateur
-                const domain = currentURL.split('/')[2]; // Extrayez le nom de domaine
-                let response = await fetch(`http://${domain}/sortirv3/public/api/lieu/${id}`)
-                if (response.ok) {
-                    return response.json()
+                async function getLieu(id) {
+                    const currentURL = window.location.href; // Obtenez l'URL actuelle du navigateur
+                    const domain = currentURL.split('/')[2]; // Extrayez le nom de domaine
+                    let response = await fetch(`http://${domain}/sortirv3/public/api/lieu/${id}`)
+                    if (response.ok) {
+                        return response.json()
+                    }
                 }
-            }
 
-        </script>
+            </script>
 
-        <br>
-        <button type="submit" class="link_button btn btn-outline-secondary">Enregistrer</button>
-        <a class="link_button btn btn-outline-danger" href="{{ path('lieu_list') }}"
-           role="button">Annuler</a>
+            <br>
+            <button type="submit" class="link_button btn btn-outline-secondary">Enregistrer</button>
+            <a class="link_button btn btn-outline-danger" href="{{ path('lieu_list') }}"
+               role="button">Annuler</a>
 
-        {{ form_end(lieuForm) }}
+            {{ form_end(lieuForm) }}
 
     </div>
 {% endblock %}
