--- a/templates/sortie/show.html.twig
+++ b/templates/sortie/show.html.twig
@@ -59,8 +59,8 @@
         </div>
     </div>
 
-
-
+    <br>
+<h2 class="container-fluid d-flex justify-content-center">Particpants</h2>
     <div class="container-fluid d-flex justify-content-center" style="margin-top: 4vh">
         <section class="container list">
             <table class="table table-hover">
@@ -91,6 +91,8 @@
             </table>
         </section>
     </div>
+    <br>
+    <br>
 
 
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
